<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
     >
    <LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:gravity="center"
		android:layout_height="46dp"
		android:background="#88A1A9"
        >
	<TextView 
		android:textColor="#4F7007" 
		android:textSize="22dp"
		android:shadowDx="6"
		android:paddingTop="10dp"
		android:shadowDy="6"
		android:shadowRadius="3"
		android:shadowColor="#EEEEEE"
		android:id="@+id/tjiemi"
		android:layout_marginRight="80dp"
		android:layout_width="wrap_content" 
		android:layout_height="46dp" 
		android:text="@string/showcontentname"/>
	<TextView 
	android:textColor="#EEEEEE" 
	android:textSize="22dp"
	android:shadowDx="6"
	android:paddingTop="10dp"
	android:shadowDy="6"
	android:shadowRadius="3"
	android:shadowColor="#4F7007"
	android:layout_width="wrap_content" 
	android:layout_height="46dp"  
	android:text="@string/jiamicontent"/>
	
</LinearLayout>   

 <LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent"
		android:gravity="center"
		android:layout_weight="1"
        android:layout_height="0dip">
 		<TextView
        android:textColor="#4F7007" 
		android:textSize="20dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/name" />
   
    	<EditText
        android:layout_width="250dp"
        android:id="@+id/name"
        android:layout_height="wrap_content"
        android:hint="@string/tishiname"/>
    	<TextView
        android:textColor="#4F7007" 
		android:textSize="20dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/content" />
   
      	<EditText
        android:layout_width="250dp"
        android:id="@+id/content"
        android:height="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/tishicontent"/>
    </LinearLayout>  
    <LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:gravity="center"
		android:paddingBottom="60dp"
        android:layout_height="100dp"> 
        
   <Button android:id="@+id/index"
	android:textColor="#4F7007" 
	android:textSize="12dp"
	android:layout_width="100dp" 
	android:layout_height="wrap_content" 
	android:text="@string/index"/>
   <Button  
    android:textColor="#4F7007" 
	android:textSize="12dp"
    android:layout_width="100dp"
	android:id="@+id/jiami"
	android:layout_height="wrap_content" 
	android:text="@string/jiami"
	/>
   <Button  
    android:textColor="#4F7007" 
	android:textSize="12dp"
    android:layout_width="100dp"
	android:id="@+id/modify"
	android:layout_height="wrap_content" 
	android:text="@string/modify"
	/>
  </LinearLayout>
 
 
</LinearLayout>