<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	> 
<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:gravity="center"
		android:layout_height="46dp"
		android:background="#88A1A9"
        >
	<TextView 
	android:textColor="#EEEEEE" 
	android:shadowDx="5"
	android:paddingTop="10dp"
	android:shadowDy="5"
	android:shadowRadius="3"
	android:shadowColor="#4F7007"
	android:textSize="22dp"
	android:layout_marginRight="80dp"
	android:layout_width="wrap_content" 
	android:layout_height="46dp" 
	android:text="@string/showcontentname"/>
	<TextView
	android:textColor="#4F7007" 
	android:textSize="22dp"
	android:shadowDx="6"
	android:paddingTop="10dp"
	android:shadowDy="5"
	android:shadowRadius="3"
	android:shadowColor="#EEEEEE"
	android:id="@+id/tjiami" 
	android:layout_width="wrap_content" 
	android:layout_height="46dp"  
	android:text="@string/jiamicontent"/>
</LinearLayout>   
<ListView  
	android:id="@+id/show"
	android:layout_width="fill_parent"
	android:divider="#EEEEEE"
	android:background="#FFFFFF" 
	android:dividerHeight="1dp"
	android:layout_height="0dip" 
	android:layout_weight="1"
	/>		
<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="46dp"
		android:gravity="center"
		android:background="#88A1A9"
        >
	<Button android:id="@+id/index"
	android:textColor="#4F7007" 
	android:textSize="12dp"
	android:layout_width="100dp" 
	android:layout_height="wrap_content" 
	android:text="@string/index"/>
	<Button android:id="@+id/deletecontent"
	android:textColor="#4F7007" 
	android:textSize="12dp"
	android:layout_width="100dp" 
	android:layout_height="wrap_content" 
	android:text="@string/deletecontent"/>
	<Button android:id="@+id/modifycontent"
	android:textColor="#4F7007" 
	android:textSize="12dp"
	android:layout_width="100dp" 
	android:layout_height="wrap_content" 
	android:text="@string/modifycontent"/>
</LinearLayout>		
</LinearLayout>
