<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:gravity="center"
    android:orientation="vertical"
     >
     <LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="40dp"
		android:background="#88A1A9"
        >
     <TextView
        android:textColor="#EEEEEE" 
		android:textSize="16dp"
		android:shadowDx="5"
		android:paddingTop="6dp"
		android:shadowDy="5"
		android:shadowRadius="3"
		android:shadowColor="#4F7007"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="little-girl:暗夜精灵  双重加密" />
     <Button
        android:textColor="#EEEEEE" 
		android:textSize="18dp"
		android:shadowDx="5"
		android:paddingTop="6dp"
		android:shadowDy="5"
		android:shadowRadius="3"
		android:shadowColor="#4F7007"
		android:layout_marginLeft="30dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:id="@+id/help"
        android:text="帮助" />
     </LinearLayout>
     <LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:gravity="center"
		android:layout_weight="1"
        >
     <ImageView android:id="@+id/titlelogo"
			android:layout_width="200dp"
			android:src="@drawable/daohang1"
			android:layout_height="100dp"
		/>
    
     </LinearLayout>
     
    
         <TextView
        android:textColor="#4F7007" 
		android:textSize="16dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/username" />
         <EditText
        android:layout_width="200dp"
        android:id="@+id/username"
        android:layout_height="wrap_content"
        android:hint="@string/tishiusername"/>
         <TextView
        android:textColor="#4F7007" 
		android:textSize="16dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pwd" />
          <EditText
        android:layout_width="200dp"
        android:id="@+id/pwd"
        android:password="true"
        android:layout_height="wrap_content"
        android:hint="@string/tishimima"/>
   
   
  <LinearLayout android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content">
   <Button 
    android:textColor="#4F7007" 
	android:textSize="20dp"
    android:layout_width="100dp"
	android:id="@+id/login"
	android:layout_height="wrap_content" 
	android:text="@string/login"
	/>
   <Button  
    android:textColor="#4F7007" 
	android:textSize="20dp"
    android:layout_width="100dp"
	android:id="@+id/regist"
	android:layout_height="wrap_content" 
	android:text="@string/regist"
	/>
   
 </LinearLayout>
 <LinearLayout android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingBottom="40dp"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content">
   <TextView
     	android:id="@+id/modifypwd"
        android:textColor="#4F7007" 
		android:textSize="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="修改密码?" />
   <TextView
     	android:id="@+id/forgetpwd"
        android:textColor="#4F7007" 
		android:textSize="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="忘记密码？" />
 </LinearLayout>
</LinearLayout>